--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Ready</title>
-      <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-database.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-auth.js"></script>
-      <script src="firebase.js"></script>
-      <link rel="stylesheet" href="login.css">
-      <script src="login.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ready</title>
+    <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-auth.js"></script>
+    <script src="firebase.js"></script>
+    <link rel="stylesheet" href="login.css">
+    <script src="login.js"></script>
 </head>
+
 <body>
-      <div class="container">
-            <h2>WELCOME</h2>
-            <div class="all">
-                  <div class="username">
-                        <input type="text" placeholder="username" class="username" id="ner">
-                  </div>
-                  <div class="pass">
-                        <input type="password" placeholder="password" class="pass" id="pass">
-                  </div>
-                  <div>
-                        <button onclick="googler()" class="button google">Google</button>
-                        <button onclick="facer()" class="button facebook">Facebook</button>
-                  </div>
-                  <button onclick="loginer()">Login</button>
-                  <button onclick="register()">Register</button>
+    <div class="login-page">
+        <div class="form">
+            <form class="register-form">
+                <input type="text" placeholder="name" />
+                <input type="password" placeholder="password" />
+                <input type="text" placeholder="email address" />
+                <button>create</button>
+                <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+            <form class="login-form">
+                <input type="text" placeholder="username" />
+                <input type="password" placeholder="password" />
+                <button>login</button>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+            <div>
+                <button onclick="googler()" class="button google">Google</button>
+                <button onclick="facer()" class="button facebook">Facebook</button>
             </div>
-      </div>
-      <script>
-            const ner = document.getElementById('ner');
-            const pass = document.getElementById('pass');
-      </script>
+
+        </div>
+    </div>
+    <script>
+        const ner = document.getElementById('ner');
+        const pass = document.getElementById('pass');
+    </script>
 </body>
+
 </html>
