--- a/public/index-g.html
+++ b/public/index-g.html
@@ -23,7 +23,9 @@
     <div data-note="Bb" class="key black"></div>
     <div data-note="B" class="key white"></div>
   </div>
-
+  <div>
+    <button onclick="starter()">Start</button>
+  </div>
   <audio id="C" src="notes/C.mp3"></audio>
   <audio id="Db" src="notes/Db.mp3"></audio>
   <audio id="D" src="notes/D.mp3"></audio>
