--- a/public/testpiano.html
+++ b/public/testpiano.html
@@ -20,7 +20,19 @@
             <div class="black" id="d"></div>
             <div class="black" id="f"></div>
             <div class="black" id="g"></div>
-            <div class="black" id="a"></div>   
+            <div class="black" id="a"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="white"></div>
+            <div class="black" id="c2"></div>
+            <div class="black" id="d2"></div>
+            <div class="black" id="f2"></div>
+            <div class="black" id="g2"></div>
+            <div class="black" id="a2"></div>     
         </div>
     </div>
 </body>
