--- a/public/index-g.html
+++ b/public/index-g.html
@@ -5,38 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.2/firebase-auth.js"></script>
+  <script src="firebase.js"></script>
   <script src="index.js" defer></script>
   <title>Piano</title>
 </head>
 <body>
-  <div class="piano">
-    <div data-note="C" class="key white"></div>
-    <div data-note="Db" class="key black"></div>
-    <div data-note="D" class="key white"></div>
-    <div data-note="Eb" class="key black"></div>
-    <div data-note="E" class="key white"></div>
-    <div data-note="F" class="key white"></div>
-    <div data-note="Gb" class="key black"></div>
-    <div data-note="G" class="key white"></div>
-    <div data-note="Ab" class="key black"></div>
-    <div data-note="A" class="key white"></div>
-    <div data-note="Bb" class="key black"></div>
-    <div data-note="B" class="key white"></div>
+  <div class="container">
+    <div class="history">
+
+    </div>
+    <div class="piano">
+      <div data-note="C" class="key white"></div>
+      <div data-note="Db" class="key black"></div>
+      <div data-note="D" class="key white"></div>
+      <div data-note="Eb" class="key black"></div>
+      <div data-note="E" class="key white"></div>
+      <div data-note="F" class="key white"></div>
+      <div data-note="Gb" class="key black"></div>
+      <div data-note="G" class="key white"></div>
+      <div data-note="Ab" class="key black"></div>
+      <div data-note="A" class="key white"></div>
+      <div data-note="Bb" class="key black"></div>
+      <div data-note="B" class="key white"></div>
+    </div>
+    <div>
+      <button onclick="starter()">Start</button>
+      <button onclick="stoper()">Stop</button>
+    </div>
+    <audio id="C" src="notes/C.mp3"></audio>
+    <audio id="Db" src="notes/Db.mp3"></audio>
+    <audio id="D" src="notes/D.mp3"></audio>
+    <audio id="Eb" src="notes/Eb.mp3"></audio>
+    <audio id="E" src="notes/E.mp3"></audio>
+    <audio id="F" src="notes/F.mp3"></audio>
+    <audio id="Gb" src="notes/Gb.mp3"></audio>
+    <audio id="G" src="notes/G.mp3"></audio>
+    <audio id="Ab" src="notes/Ab.mp3"></audio>
+    <audio id="A" src="notes/A.mp3"></audio>
+    <audio id="Bb" src="notes/Bb.mp3"></audio>
+    <audio id="B" src="notes/B.mp3"></audio>
   </div>
-  <div>
-    <button onclick="starter()">Start</button>
-  </div>
-  <audio id="C" src="notes/C.mp3"></audio>
-  <audio id="Db" src="notes/Db.mp3"></audio>
-  <audio id="D" src="notes/D.mp3"></audio>
-  <audio id="Eb" src="notes/Eb.mp3"></audio>
-  <audio id="E" src="notes/E.mp3"></audio>
-  <audio id="F" src="notes/F.mp3"></audio>
-  <audio id="Gb" src="notes/Gb.mp3"></audio>
-  <audio id="G" src="notes/G.mp3"></audio>
-  <audio id="Ab" src="notes/Ab.mp3"></audio>
-  <audio id="A" src="notes/A.mp3"></audio>
-  <audio id="Bb" src="notes/Bb.mp3"></audio>
-  <audio id="B" src="notes/B.mp3"></audio>
 </body>
 </html>
